--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -36,7 +36,7 @@
       <li class="{{(views.timeline==true) && 'active'}}" ng-hide="views.user">
         <a href="#userTimelineTab" 
             data-toggle="tab"
-            ng-click="fixTabHeight('userTimelineTab'); setViewTo('timeline')">
+            ng-click="fixTabHeight('userTimelineTab'); setViewTo('timeline'); redraw()">
           <span class="entypo">&#128340;</span> Timeline
         </a>
       </li>
@@ -244,6 +244,30 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <!-- userTimelineTab -->
       <div class="tab-pane {{(views.timeline==true) && 'active'}}" 
             id="userTimelineTab"
@@ -252,9 +276,268 @@
         <!-- tab header -->
         <div style="overflow: hidden; height: 35px">
           <h3 style="margin-top: 0;" class="pull-left">Timeline</h3>
+
+          <div class="btn-group pull-right">
+            <button type="submit" 
+                    ng-click="toggleSlotForm()" 
+                    class="btn btn-success {{(forms.add==true) && 'active'}}">New Availability</button>
+          </div>
+
         </div>
         <!-- end tab header -->
         <hr>
+
+
+
+
+
+
+
+<!-- timeline controls -->
+<div class="row-fluid" id="timeline-controls">
+
+  <!-- core timeline controls -->
+  <div class="pull-left" style="margin-top: 10px">
+
+    <!-- timeline navigation -->
+    <div class="btn-group pull-left" 
+          style="margin-right: 5px">
+
+      <button type="button" 
+              class="btn"
+              ng-click="timelineBefore(timeline.scope)"><i class="icon-arrow-left"></i></button>
+
+      <button type="button" 
+              class="btn"
+              ng-click="timelineAfter(timeline.scope)"><i class="icon-arrow-right"></i></button>  
+
+    </div>
+    <!-- end timeline navigation -->
+
+    <!-- timeline zooms -->
+    <div class="btn-group pull-left"
+          style="margin-right: 5px">
+
+      <button type="button" 
+              class="btn"
+              ng-click="timelineZoomIn()"><i class="icon-zoom-in"></i></button>
+
+      <button type="button" 
+              class="btn"
+              ng-click="timelineZoomOut()"><i class="icon-zoom-out"></i></button> 
+
+    </div>
+    <!-- end timeline zooms -->
+
+  </div>
+  <!-- end core timeline controls -->
+
+
+
+  <!-- range indicator -->
+  <div class="pull-right" style="text-align: right">
+    <h4 style="font-weight: normal">
+      {{timeline.range|rangeMainWeekFilter}}<br>
+      <!-- timeline scope info -->
+      <div style="font-size: 15px; font-weight: lighter">
+      <span>{{timeline|rangeInfoWeekFilter}}</span>
+      </div>
+      <!-- end timeline scope info -->
+    </h4>
+  </div>
+  <!-- end range indicator -->
+
+
+
+
+</div>
+<!-- end timeline controls -->
+
+
+
+
+
+
+
+<!-- slot controls -->
+<div id="form-open" class="row-fluid" ng-show="forms.add || forms.edit">
+
+  <form class="form-inline form-toggled">
+
+    <!-- close btn -->
+    <button ng-click="resetInlineForms()" 
+            class="close">&times;</button>
+    <!-- end close btn -->
+  
+    <h4 ng-show="forms.add">New Availability</h4>
+    <h4 ng-show="forms.edit">Update Availability</h4>
+
+    <hr>
+
+    <!-- slot start -->
+    <div class="form-elements-group">
+      <label>From</label>
+      <!-- date -->
+      <div class="control-group dater">
+        <input  name="date-start" 
+                type="text" 
+                ng-model="slot.start.date" 
+                data-date-format="dd-mm-yyyy" 
+                bs-datepicker="">
+        <i class="icon-calendar"></i>
+      </div>
+      <!-- end date -->
+      <!-- time -->
+      <div class="control-group timer">
+        <input  name="time-start" 
+                type="text" 
+                ng-model="slot.start.time" 
+                bs-timepicker>
+        <i class="icon-time"></i>
+      </div>
+      <!-- end time -->
+    </div>
+    <!-- end slot start -->
+
+
+    <!-- slot end -->
+    <div class="form-elements-group">
+      <label>Till</label>
+      <!-- date -->
+      <div class="control-group dater">
+        <input  name="date-end" 
+                type="text" 
+                ng-model="slot.end.date" 
+                data-date-format="dd-mm-yyyy" 
+                bs-datepicker="">
+        <i class="icon-calendar"></i>
+      </div>
+      <!-- end date -->
+      <!-- time -->
+      <div class="control-group timer">
+        <input  name="time-end" 
+                type="text" 
+                ng-model="slot.end.time" 
+                bs-timepicker>
+        <i class="icon-time"></i>
+      </div>
+      <!-- end time -->
+    </div>
+    <!-- end slot end -->
+
+
+    <!-- slot state -->
+    <div class="form-elements-group">
+      <label>State</label>
+      <select ng-model="slot.state" 
+              ng-options="option as value for (option, value) in states" 
+              ng-show="views.slot.add || views.slot.edit">
+        <option value="">select a state</option>
+      </select>
+    </div>
+    <!-- end slot state -->
+
+
+    <!-- slot recursive -->
+    <div class="form-elements-group">
+      <label>Re-occuring</label>
+      <input type="checkbox" ng-model="slot.recursive">
+    </div>
+    <!-- end slot recursive -->
+
+
+    <!-- slot actions -->
+    <div class="form-elements-actions pull-right">
+      
+      <div ng-show="forms.add">
+        <button type="button" 
+                ng-click="slotAdd(slot)" 
+                class="btn btn-success">Add</button>
+      </div>
+
+      <div ng-show="forms.edit">
+        <button type="button" 
+                ng-click="slotChange(original, slot)" 
+                class="btn btn-success">Change</button>
+        <button type="button" 
+                ng-click="slotRemove()" 
+                class="btn btn-danger">Delete</button>
+      </div>
+
+    </div>
+    <!-- end slot actions -->
+
+
+  </form>
+  
+</div>
+<!-- end slot controls -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!-- user timeline -->
 
@@ -270,12 +553,12 @@
         
         <hr>
         <!-- planbaord footer -->
-        <!-- <p>
+        <p>
           <small class="pull-left">
             <span class="text-warning">Last sync time: </span>
             <span class="muted">{{data.synced | nicelyDate}}</span>
           </small>
-        </p> -->
+        </p>
         <!-- end planbaord footer -->
 
         <!-- end user timeline -->
