--- a/js/views/groups.html
+++ b/js/views/groups.html
@@ -413,21 +413,30 @@
         <!-- end groups list -->
 
 
-
         <div class="pull-right">
+
+          <input type="text" 
+                  class="span2 search-query" 
+                  placeholder="Filter members.." 
+                  style="margin-right:5px"
+                  ng-model="filtered">
+
           <button type="button" 
                   ng-click="fixTabHeight('editGroupTab'); editGroup(group)" 
+                  style="margin-right:5px"
                   class="btn"><i class="icon-edit"></i> Edit Group</button>
+
           <button type="button" 
                   ng-click="deleteGroup(group.uuid)" 
                   class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete Group</button>
         </div>
+
       </div>
       <hr>
-      <p ng-hide="data.members[group.uuid].length > 0">
-        There are no members in this group. Please add some.
+      <p ng-hide="(data.members[group.uuid]|filter:filtered).length > 0">
+        There are no members.
       </p>
-      <div ng-show="data.members[group.uuid].length > 0">
+      <div ng-show="(data.members[group.uuid]|filter:filtered).length > 0">
         <table class="table table-striped">
           <thead>
             <tr>
@@ -443,7 +452,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="member in data.members[group.uuid]">
+            <tr ng-repeat="member in data.members[group.uuid] | filter:filtered">
               <td>
                 <input type="checkbox"
                         ng-model="selection[member.uuid]"
@@ -470,7 +479,7 @@
                 <i class="icon-trash icon-white"></i> Remove Selected Members</button>
 
         <span class="muted pull-right">
-          <small><i>There are {{data.members[group.uuid].length}} member(s)</i></small>
+          <small><i>There are {{(data.members[group.uuid]|filter:filtered).length}} member(s)</i></small>
         </span>
       </div>
     </div>
