table sorting for groups & latest received message first in messages listing

--- a/css/styles.css
+++ b/css/styles.css
@@ -734,6 +734,41 @@ label {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+.table thead th a {
+  color: #fff;
+}
+
+.table thead th a:hover {
+  color:#fff;
+  text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*.meny {
   display: none;
   padding: 20px;
