--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ html,body {
 
 #loading {
   position: absolute;
-  top: 180px;
+  top: 30%;
   width: 100%;
   text-align: center;
 }
@@ -177,11 +177,11 @@ html,body {
 }
 
 #loading span.entypo {
-  font-size: 360px;
+  font-size: 20em;
   display: block;
-  line-height: 210px;
   color: #a19781;
-  text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);  
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
+  height: 160px;
 }
 
 
@@ -221,16 +221,20 @@ html,body {
 #download button {
   /*width: 360px;*/
   /*padding-top: 15px;
-  padding-bottom: 15px;*/
+  padding-bottom: 10px;*/
+  /*padding:0;*/
 }
 
 #download button span.entypo {
   font-size: 46px;
   margin-right: 5px;
-  line-height: 40px;
+  /*line-height: 40px;*/
   /*text-shadow: 1px 1px 0 black;*/
-  /*text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);*/
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
   text-shadow: none;
+  /*height: 30px;*/
+  position: relative;
+  top:-10px;
 }
 
 #download button span.msg {
@@ -301,16 +305,16 @@ html,body {
 #footer #copyrights {
   position: absolute;
   right: 20px;
-  margin-top: 0;
+  margin-top: 0px;
   text-align: right;
-  line-height: 16px;
+  line-height: 14px;
 }
 
 #footer #copyrights span.muted {
   float: right;
   position: absolute;
   top: 5px;
-  right: 215px;
+  right: 195px;
   width: 200px;
 }
 
@@ -322,16 +326,19 @@ html,body {
   position: absolute;
   top: 0;
   right: 0;
-  width: 200px;
+  width: 180px;
+  /*padding-top: 10px;
+  padding-bottom: 8px;*/
 }
 
 #download-footer button span.entypo {
-  font-size: 36px;
+  font-size: 32px;
   margin-right: 5px;
-  line-height: 30px;
+  /*line-height: 30px;*/
   /*text-shadow: 1px 1px 0 black;*/
   /*text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);*/
   text-shadow: none;
+  height: 24px;
 }
 
 #download-footer button span.msg {
@@ -455,10 +462,19 @@ html,body {
 .nav-tabs-app li {
   text-align: center;
 }
-.nav-tabs-app li span {
+
+.nav-tabs-app li a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
+}
+
+.nav-tabs-app li a span {
   font-size: 52px;
   display: block;
-  margin-top: 15px;
+  /*margin-top: 15px;*/
+  /*margin-bottom: 10px;*/
+  height: 30px;
   margin-bottom: 10px;
 }
 
@@ -469,9 +485,9 @@ html,body {
   height: 35px
 }
 
-
 .tab-header h3 {
   margin-top: 0;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.35);
 }
 
 .nav-tabs-list {
