--- a/js/views/login.html
+++ b/js/views/login.html
@@ -131,9 +131,10 @@
 
 <!-- download mobile app -->
 <div id="download">
-	<button class="btn btn-success" type="button">
-		<span class="entypo">&#128241;</span>
-		<span class="msg">Download Mobile App</span>
+	<button class="btn btn-success btn-large" type="button">
+		<!-- <span class="entypo">&#128241;</span> -->
+		<!-- <i class="icon-download icon-white"></i> -->
+		Download Mobile App
 	</button>
 </div>
 <!-- end download mobile app -->
