knrm test users added for testing

--- a/js/views/login.html
+++ b/js/views/login.html
@@ -1,25 +1,4 @@
 
-<!-- <div class="meny">
-	<h2>More Experiments</h2>
-	<ul>
-		<li><a href="http://lab.hakim.se/avgrund/">Avgrund</a></li>
-		<li><a href="http://lab.hakim.se/radar/">Radar</a></li>
-		<li><a href="http://lab.hakim.se/forkit-js/">forkit.js</a></li>
-		<li><a href="http://lab.hakim.se/scroll-effects/">stroll.js</a></li>
-		<li><a href="http://lab.hakim.se/zoom-js">zoom.js</a></li>
-		<li><a href="http://lab.hakim.se/reveal-js">reveal.js</a></li>
-		<li><a href="http://itunes.apple.com/us/app/sinuous/id543097218">Sinuous for iOS</a></li>
-		<li><a href="http://hakim.se/experiments/css/domtree/">DOM Tree</a></li>
-		<li><a href="http://hakim.se/experiments/css/holobox/">Holobox</a></li>
-		<li><a href="http://hakim.se/experiments/html5/404/netmag.html">404</a></li>
-	</ul>
-</div>
-
-<div class="meny-arrow"></div> -->
-
-
-
-
 <div id="welcome">
 
 	<!-- preloader -->
@@ -138,3 +117,16 @@
 	</button>
 </div>
 <!-- end download mobile app -->
+
+
+<!-- knrm users -->
+<div id="demo_users" class="well" ng-show="demo_users">
+	<h4>Test users</h4>
+	<hr>
+	<ul>
+		<li ng-repeat="user in demo_users">
+			<a ng-click="knrmLogin(user)">{{user.name}} ({{user.resources.role|translateRole}})</a>
+		</li>
+	</ul>
+</div>
+<!-- end knrm users -->
