--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -10,6 +10,10 @@
 <!-- end page header -->
 
 
+<!-- {{timeline.scope}}
+<br>
+{{timeline.range}} -->
+
 
 <!-- timeline controls -->
 <div class="row-fluid" id="timeline-controls">
