--- a/js/views/dashboard.html
+++ b/js/views/dashboard.html
@@ -1,5 +1,5 @@
 <div class="well well-large greetings">
-  <h2>Welcome, {{app.resources.name}}</h2>
+  <h2>{{ui.dashboard.welcome}}, {{app.resources.name}}</h2>
 </div>
 
 <!-- row-fluid -->
@@ -10,7 +10,7 @@
 
     <!-- pie charts for groups -->
     <div id="weekly-pies" class="span8">
-      <h4>This Week</h4>
+      <h4>{{ui.dashboard.thisWeek}}</h4>
       <hr>
 
       <p class="muted" ng-show="loading.status">{{loading.message}}</p>
@@ -42,7 +42,7 @@
       <div id="new-messages" 
             class="announcement"
             ng-show="(messages.length > 0)">
-        <h4>New Messages</h4>
+        <h4>{{ui.dashboard.newMessage}}</h4>
         <hr>
 
         <ul>
@@ -53,7 +53,7 @@
           </li>
         </ul>
 
-        <a href="#/messages/#inbox" class="btn btn-small pull-right">Go to inbox</a>
+        <a href="#/messages/#inbox" class="btn btn-small pull-right">{{ui.dashboard.goToInbox}}</a>
       </div>
       <!-- end new messages -->
 
