--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -4,7 +4,7 @@
   <div class="btn-group pull-right">
     <button type="submit" 
             ng-click="toggleSlotForm()" 
-            class="btn btn-success {{(views.slot.add==true) && 'active'}}">New Availability</button>
+            class="btn btn-success {{(views.slot.add==true) && 'active'}}">{{ui.planboard.newAvail}}</button>
   </div>
 </div>
 <!-- end page header -->
@@ -43,17 +43,17 @@
       <button type="button" 
               ng-model="timeline.scope.day" 
               class="btn {{(timeline.scope.day==true) && 'active'}}" 
-              ng-click="timelineScoper('day')">Day</button>
+              ng-click="timelineScoper('day')">{{ui.planboard.day}}</button>
 
       <button type="button" 
               ng-model="timeline.scope.week" 
               class="btn {{(timeline.scope.week==true) && 'active'}}" 
-              ng-click="timelineScoper('week')">Week</button>
+              ng-click="timelineScoper('week')">{{ui.planboard.week}}</button>
 
       <button type="button" 
               ng-model="timeline.scope.month" 
               class="btn {{(timeline.scope.month==true) && 'active'}}" 
-              ng-click="timelineScoper('month')">Month</button>
+              ng-click="timelineScoper('month')">{{ui.planboard.month}}</button>
 
     </div>
     <!-- end timeline scopers -->
@@ -120,8 +120,8 @@
             class="close">&times;</button>
     <!-- end close btn -->
   
-    <h4 ng-show="views.slot.add">New Availability</h4>
-    <h4 ng-show="views.slot.edit">Update Availability</h4>
+    <h4 ng-show="views.slot.add">{{ui.planboard.newAvail}}</h4>
+    <h4 ng-show="views.slot.edit">{{ui.planboard.updateAvail}}</h4>
     <h4 ng-show="views.group">{{slot.group|stripHtml}}</h4>
     <h4 ng-show="views.wish">{{slot.group|stripHtml}} (Wishes)</h4>
     <h4 ng-show="views.member">{{slot.member|convertUserIdToName}}</h4>
@@ -130,7 +130,7 @@
 
     <!-- slot start -->
     <div class="form-elements-group">
-      <label>From</label>
+      <label>{{ui.planboard.from}}</label>
       <!-- date -->
       <div class="control-group dater" ng-show="views.slot.add || views.slot.edit || views.wish">
         <input  name="date-start" 
@@ -170,7 +170,7 @@
 
     <!-- slot end -->
     <div class="form-elements-group">
-      <label>Till</label>
+      <label>{{ui.planboard.till}}</label>
       <!-- date -->
       <div class="control-group dater" ng-show="views.slot.add || views.slot.edit || views.wish">
         <input  name="date-end" 
@@ -210,11 +210,11 @@
 
     <!-- slot state -->
     <div class="form-elements-group" ng-show="views.slot.add || views.slot.edit || views.member">
-      <label>State</label>
+      <label>{{ui.planboard.state}}</label>
       <select ng-model="slot.state" 
               ng-options="option as value for (option, value) in states" 
               ng-show="views.slot.add || views.slot.edit">
-        <option value="">select a state</option>
+        <option value="">{{ui.planboard.selectAState}}</option>
       </select>
       <select ng-model="slot.state" 
               disabled
@@ -227,7 +227,7 @@
 
     <!-- slot recursive -->
     <div class="form-elements-group" ng-show="views.slot.add || views.slot.edit">
-      <label>Re-occuring</label>
+      <label>{{ui.planboard.reoccuring}}</label>
       <input type="checkbox" ng-model="slot.recursive">
     </div>
     <!-- end slot recursive -->
@@ -236,9 +236,9 @@
     <!-- group diff -->
     <div class="form-elements-group" ng-show="views.group">
       <small>
-        <i ng-show="(slot.diff < 0)">There <strong>{{slot.diff}} less people</strong> than needed!</i>
-        <i ng-show="(slot.diff == 0)">There are <strong>just as many people</strong> as needed.</i>
-        <i ng-show="(slot.diff > 0)">There are <strong>{{slot.diff}} more people</strong> than needed!</i>
+        <i ng-show="(slot.diff < 0)">{{slot.diff | i18n_spec:'planboard.lessPeople'}}</i>
+        <i ng-show="(slot.diff == 0)">{{ui.planboard.samePeople}}</i>
+        <i ng-show="(slot.diff > 0)">{{slot.diff | i18n_spec:'planboard.morePeople'}}</i>
       </small>
     </div>
     <!-- group diff -->
@@ -246,7 +246,7 @@
 
     <!-- wish diff -->
     <div class="form-elements-group" ng-show="views.wish">
-      <label>Wished</label>
+      <label>{{ui.planboard.wished}}</label>
       <input  name="wish-count" 
               type="text" 
               class="input-mini" 
@@ -258,7 +258,7 @@
     <!-- member info -->
     <div class="form-elements-group" ng-show="views.member">
       <small>
-        <i>This is a combined row of planning with re-occuring rows.</i>
+        <i>{{ui.planboard.combine_reoccuring}}</i>
       </small>
     </div>
     <!-- end member info -->
@@ -270,28 +270,28 @@
       <div ng-show="(slot.diff < 0)">
         <button type="button" 
                 ng-click="sendShortageMessage(slot)" 
-                class="btn btn-success">Send Message To Members</button>
+                class="btn btn-success">{{ui.planboard.sendMsgToMember}}</button>
       </div>
       
       <div ng-show="views.slot.add">
         <button type="button" 
                 ng-click="add(slot)" 
-                class="btn btn-success">Add</button>
+                class="btn btn-success">{{ui.planboard.add}}</button>
       </div>
 
       <div ng-show="views.slot.edit">
         <button type="button" 
                 ng-click="delete()" 
-                class="btn btn-danger">Delete</button>
+                class="btn btn-danger">{{ui.planboard.del}}</button>
         <button type="button" 
                 ng-click="change(original, slot)" 
-                class="btn btn-success">Change</button>
+                class="btn btn-success">{{ui.planboard.change}}</button>
       </div>
 
       <div ng-show="views.wish">
         <button type="button" 
                 ng-click="setWish(slot)" 
-                class="btn btn-success">Set Wish</button>
+                class="btn btn-success">{{ui.planboard.setWish}}</button>
       </div>
 
     </div>
@@ -326,13 +326,12 @@
       <li class="active">
         <a href="#timelineTab" 
             data-toggle="tab"
-            ng-click="fixTabHeight('timelineTab')"><span class="entypo">&#128340;</span> Timeline</a>
+            ng-click="fixTabHeight('timelineTab')"><span class="entypo">&#128340;</span> {{ui.planboard.timeline}}</a>
       </li>
       <li>
         <a href="#statisticsTab" 
             data-toggle="tab"
-            ng-click="fixTabHeight('statisticsTab')"><span class="entypo">&#128200;</span> Statistics</a>
-      </li>
+            ng-click="fixTabHeight('statisticsTab')"><span class="entypo">&#128200;</span> {{ui.planboard.statistics}}</a>      </li>
     </ul>
     <!-- end tabs -->
 
@@ -389,7 +388,7 @@
                 <button type="button" 
                         ng-click="barCharts()" 
                         class="btn {{(timeline.config.bar==true) && 'active'}}" 
-                        ng-model="timeline.config.bar">Bar charts</button>
+                        ng-model="timeline.config.bar">{{ui.planboard.barCharts}}</button>
 
               </div>
               <!-- end timeline bar charts -->
@@ -400,7 +399,7 @@
                 <button type="button" 
                         ng-click="groupWishes()"
                         class="btn {{(timeline.config.wishes==true) && 'active'}}" 
-                        ng-model="timeline.config.wishes">Wishes</button>
+                        ng-model="timeline.config.wishes">{{ui.planboard.wishes}}</button>
 
               </div>
               <!-- end group wishes -->
@@ -411,7 +410,7 @@
                 <button type="button" 
                         ng-click="showLegenda()"
                         class="btn {{(timeline.config.legendarer==true) && 'active'}}" 
-                        ng-model="timeline.config.legendarer">Legenda</button>
+                        ng-model="timeline.config.legendarer">{{ui.planboard.legenda}}</button>
 
               </div>
               <!-- end legenda -->
@@ -422,12 +421,12 @@
                 <button type="button" 
                         ng-model="timeline.current.layouts.group" 
                         class="btn {{(timeline.current.layouts.group==true) && 'active'}}" 
-                        ng-click="requestTimeline(timeline.current, 'group')">Group</button>
+                        ng-click="requestTimeline(timeline.current, 'group')">{{ui.planboard.group}}</button>
 
                 <button type="button" 
                         ng-model="timeline.current.layouts.members" 
                         class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
-                        ng-click="requestTimeline(timeline.current, 'members')">Members</button>
+                        ng-click="requestTimeline(timeline.current, 'members')">{{ui.planboard.members}}</button>
 
               </div>
               <!-- end timeline layout manager -->
@@ -442,7 +441,7 @@
           <div class="legenda" ng-show="timeline.config.legendarer">
 
             <div class="legenda-row">
-              <strong>Members</strong>
+              <strong>{{ui.planboard.members}}</strong>
               <ul>
                 <li class="legenda-Available">
                   <label>
@@ -450,7 +449,7 @@
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
                             ng-model="timeline.config.legenda['com.ask-cs.State.Available']">
-                    Beschikbaar Beide
+                    {{ui.planboard.bothAvailable}}
                   </label>
                 </li>
                 <li class="legenda-BeschikbaarNoord">
@@ -459,7 +458,7 @@
                     <input  type="checkbox"
                             ng-click="alterLegenda(timeline.config.legenda)" 
                             ng-model="timeline.config.legenda['com.ask-cs.State.KNRM.BeschikbaarNoord']">
-                    Beschikbaar Noord
+                    {{ui.planboard.northAavailable}}
                   </label>
                 </li>
                 <li class="legenda-BeschikbaarZuid">
@@ -468,7 +467,7 @@
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
                             ng-model="timeline.config.legenda['com.ask-cs.State.KNRM.BeschikbaarZuid']">
-                    Beschikbaar Zuid
+                    {{ui.planboard.southAvailable}}
                   </label>
                 </li>
                 <li class="legenda-SchipperVanDienst">
@@ -477,7 +476,7 @@
                     <input  type="checkbox"   
                             ng-click="alterLegenda(timeline.config.legenda)" 
                             ng-model="timeline.config.legenda['com.ask-cs.State.KNRM.SchipperVanDienst']">
-                    Schipper Van Dienst
+                    {{ui.planboard.skipperOutService}}
                   </label>
                 </li>
                 <li class="legenda-Unavailable">
@@ -486,7 +485,7 @@
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
                             ng-model="timeline.config.legenda['com.ask-cs.State.Unavailable']">
-                    Niet Beschikbaar
+                    {{ui.planboard.notAvailable}}
                   </label>
                 </li>
                 <li class="legenda-NotReached">
@@ -495,21 +494,21 @@
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
                             ng-model="timeline.config.legenda['com.ask-cs.State.Unreached']">
-                    Niet Bereikt
+                    {{ui.planboard.notachieve}} 
                   </label>
                 </li>
               </ul>
             </div>
 
             <div class="legenda-row last-legenda-row">
-              <strong>Groups</strong>
+              <strong>{{ui.planboard.Groups}}</strong>
               <ul>
                 <li class="legenda-more">
                   <label>
                     <div class="square"></div>
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
-                            ng-model="timeline.config.legenda.groups.more">More people
+                            ng-model="timeline.config.legenda.groups.more">{{ui.planboard.morePeople}}
                   </label>
                 </li>
                 <li class="legenda-even">
@@ -517,7 +516,7 @@
                     <div class="square"></div>
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
-                            ng-model="timeline.config.legenda.groups.even">Just enough people
+                            ng-model="timeline.config.legenda.groups.even">{{ui.planboard.enoughPeople}}
                   </label>
                 </li>
                 <li class="legenda-less">
@@ -525,7 +524,7 @@
                     <div class="square"></div>
                     <input  type="checkbox" 
                             ng-click="alterLegenda(timeline.config.legenda)" 
-                            ng-model="timeline.config.legenda.groups.less">Less people
+                            ng-model="timeline.config.legenda.groups.less">{{ui.planboard.lessPeople}}
                   </label>
                 </li>
               </ul>
@@ -545,14 +544,14 @@
         <!-- planbaord footer -->
         <p>
           <small class="pull-left">
-            <span class="text-warning">Last sync time: </span>
+            <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>
             <span class="muted">{{data.synced | nicelyDate}}</span>
           </small>
           <small class="pull-right">
-            <span class="text-warning">Data range start: </span>
+            <span class="text-warning">{{ui.planboard.dataRangeStart}}</span>
             <span class="muted">{{data.periods.start | nicelyDate}}</span>
             &nbsp;
-            <span class="text-warning">Data range end: </span>
+            <span class="text-warning">{{ui.planboard.dataRangeEnd}}</span>
             <span class="muted">{{data.periods.end | nicelyDate}}</span>
           </small>
         </p>
@@ -607,12 +606,12 @@
               <button type="button" 
                       ng-model="timeline.current.layouts.group" 
                       class="btn {{(timeline.current.layouts.group==true) && 'active'}}" 
-                      ng-click="requestTimeline(timeline.current, 'group')">Group</button>
+                      ng-click="requestTimeline(timeline.current, 'group')">{{ui.planboard.group}}</button>
 
               <button type="button" 
                       ng-model="timeline.current.layouts.members" 
                       class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
-                      ng-click="requestTimeline(timeline.current, 'members')">Members</button>
+                      ng-click="requestTimeline(timeline.current, 'members')">{{ui.planboard.members}}</button>
 
             </div>
             <!-- end timeline layout manager -->
@@ -627,66 +626,66 @@
         <div class="legenda">
 
           <div class="legenda-row">
-            <strong>Members</strong>
+            <strong>{{ui.planboard.members}}</strong>
             <ul>
               <li class="legenda-Available">
                 <label>
                   <div class="square"></div>
-                  Beschikbaar Beide
+                  {{ui.planboard.bothAvailable}}
                 </label>
               </li>
               <li class="legenda-BeschikbaarNoord">
                 <label>
                   <div class="square"></div>
-                  Beschikbaar Noord
+                  {{ui.planboard.northAavailable}}
                 </label>
               </li>
               <li class="legenda-BeschikbaarZuid">
                 <label>
                   <div class="square"></div>
-                  Beschikbaar Zuid
+                  {{ui.planboard.southAvailable}}
                 </label>
               </li>
               <li class="legenda-SchipperVanDienst">
                 <label>
                   <div class="square"></div>
-                  Schipper Van Dienst
+                  {{ui.planboard.skipperOutService}}
                 </label>
               </li>
               <li class="legenda-Unavailable">
                 <label>
                   <div class="square"></div>
-                  Niet Beschikbaar
+                  {{ui.planboard.notAvailable}}
                 </label>
               </li>
               <li class="legenda-NotReached">
                 <label>
                   <div class="square"></div>
-                  Niet Bereikt
+                  {{ui.planboard.notachieve}}
                 </label>
               </li>
             </ul>
           </div>
 
           <div class="legenda-row last-legenda-row">
-            <strong>Groups</strong>
+            <strong>{{ui.planboard.Groups}}</strong>
             <ul>
               <li class="legenda-more">
                 <label>
                   <div class="square"></div>
-                  More people
+                  {{ui.planboard.morePeople}}
                 </label>
               </li>
               <li class="legenda-even">
                 <label>
                   <div class="square"></div>
-                  Just enough people
+                  {{ui.planboard.enoughPeople}}
                 </label>
               </li>
               <li class="legenda-less">
                 <label>
                   <div class="square"></div>
-                  Less people
+                  {{ui.planboard.lessPeople}}
                 </label>
               </li>
             </ul>
@@ -762,14 +761,14 @@
         <!-- planbaord footer -->
         <p>
           <small class="pull-left">
-            <span class="text-warning">Last sync time: </span>
+            <span class="text-warning">{{ui.planboard.lastSyncTime}} </span>
             <span class="muted">{{data.synced | nicelyDate}}</span>
           </small>
           <small class="pull-right">
-            <span class="text-warning">Data range start: </span>
+            <span class="text-warning">{{ui.planboard.dataRangeStart}} </span>
             <span class="muted">{{data.periods.start | nicelyDate}}</span>
             &nbsp;
-            <span class="text-warning">Data range end: </span>
+            <span class="text-warning">{{ui.planboard.dataRangeEnd}} </span>
             <span class="muted">{{data.periods.end | nicelyDate}}</span>
           </small>
         </p>
